tests/lean/kernelMVarBug.lean.expected.out
kernelMVarBug.lean:5:15-5:20: error: failed to synthesize
  HAdd α α α

Additional diagnostic information may be available using the `set_option diagnostics true` command.
